style.css
/* Reset CSS */
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
}

img {
  max-width: 100%;
}

a:where(:active, :link, :visited, :checked, :focus-visible, :focus-within) {
  text-decoration: none;
  color: inherit;
}

ul,
h1,
h2,
h3 {
  padding: 0;
  margin: 0;
}

li {
  list-style: none;
}

/* base setting */
:where(:root) {
  --clr-1: #2e323f;
  --clr-2: #3b4050;
  --clr-3: #6f737f;
  --clr-4: #fff;
  --clr-5: #a59678;
  --clr-6: rgba(0, 0, 0, 0.05);

  --fz-1: 1rem;
  --fz-2: 1.125rem;
  --fz-3: 1.3125rem;
  --fz-4: 1.5rem;
  --fz-5: 1.875rem;
  --fz-6: 2rem;
  --fz-7: 2.25rem;
  --fz-8: 5.625rem;
}

body {
  font-family: "Oswald", sans-serif;
  font-weight: bold;
}

button {
  background-color: transparent;
  color: inherit;
  font-weight: inherit;
  font-family: inherit;
  border: none;
  padding: 0;
  cursor: pointer;
}

/* utility class name */
.container {
  width: min(100% - 2rem, 75rem);
  margin-inline: auto;
}

.full-bg {
  background-color: var(--bg-clr);
  box-shadow: 0 0 0 100vmax var(--bg-clr);
  clip-path: inset(0 -100vmax);
}

.text {
  font-family: "Montserrat", sans-serif;
  font-weight: normal;
}

/* header */
.header {
  --bg-clr: var(--clr-1);

  color: var(--clr-4);
  padding-block: 1rem;
  font-size: clamp(var(--fz-1), calc(0.94rem + 0.24vw), var(--fz-2));
}

.nav {
  display: flex;
  gap: 0.25rem clamp(1em, calc(-0.8rem + 7.68vw), 4em);
  flex-wrap: wrap;
  align-items: center;
}

.nav__list {
  display: flex;
  gap: clamp(1em, calc(-0.2rem + 5.12vw), 3em);
}

/* cta */
.cta {
  --bg-clr: var(--clr-2);

  display: grid;
  gap: 1rem;
  color: var(--clr-4);
  padding-block-start: calc(10vmin + 2rem);
  padding-block-end: calc(10vmin + 5rem);
}

.cta__title {
  font-size: clamp(2.5rem, calc(1.08rem + 6.06vw), var(--fz-8));
  line-height: 1;
}

.cta__title > span {
  color: var(--clr-5);
}

.cta__content {
  font-size: clamp(var(--fz-2), calc(0.95rem + 0.73vw), var(--fz-4));
  align-self: end;
}

/* main */
.point-list {
  --bg-clr: var(--clr-6);

  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1.5rem;
  padding-block: calc(10vmin + 1rem);
}

.point {
  flex: 0 1 18rem;
}

.point__title {
  font-size: clamp(var(--fz-4), calc(1.33rem + 0.73vw), var(--fz-5));
  color: var(--clr-5);
}

.point__content {
  font-size: clamp(var(--fz-1), calc(0.94rem + 0.24vw), var(--fz-2));
}

.content {
  padding-block: calc(15vmin + 1rem);
  padding-inline: 1rem;
  font-size: clamp(var(--fz-1), calc(0.86rem + 0.61vw), var(--fz-3));
}

.content__img {
  margin-block-end: 3rem;
}

.content + .text {
  margin: 0;
}

.content__title {
  font-size: clamp(var(--fz-5), calc(1.7rem + 0.73vw), var(--fz-7));
  color: var(--clr-5);
}

.list {
  display: grid;
  gap: 2rem;
  grid-template-columns: repeat(
    auto-fit,
    minmax(min(100%, (43.75rem - 4rem) / 3), 1fr)
  );
  margin-block-start: 4rem;
}

.item {
  display: grid;
  place-content: center;
  padding: 1.25rem;
  text-align: center;
  background-color: var(--clr-2);
  color: var(--clr-4);
}

.item__title {
  font-size: clamp(var(--fz-5), calc(1.7rem + 0.73vw), var(--fz-7));
}

.item__text {
  font-size: clamp(var(--fz-1), calc(0.94rem + 0.24vw), var(--fz-2));
}

/* footer */
.footer {
  --bg-clr: var(--clr-2);

  padding-block: calc(10vmin + 1rem);
  text-align: center;
}

.footer__content {
  display: grid;
  gap: 2rem;
}

.footer__title {
  color: var(--clr-4);
  font-size: clamp(var(--fz-5), calc(1.36rem + 2.18vw), 3rem);
  margin-block-end: calc(5vmin + 1rem);
}

.footer__section {
  color: var(--clr-4);
}

.footer__section h3 {
  font-size: clamp(var(--fz-1), calc(0.86rem + 0.61vw), var(--fz-3));
  color: var(--clr-5);
  margin-block-end: clamp(var(--fz-1), calc(0.7rem + 1.28vw), var(--fz-4));
}

.footer__section p {
  margin: 0;
}

.footer__links {
  display: grid;
  gap: clamp(0.5rem, calc(0.27rem + 0.97vw), var(--fz-1));
}

/* button */
.buttons {
  display: flex;
  gap: 0.5rem;
}

.btn {
  font-size: inherit;
}

.btn_action {
  background-color: var(--clr-5);
  border-radius: 99em;
  padding: var(--btn-action-py, 0.25em) var(--btn-action-px, 0.75em);
}

.btn_cta {
  --btn-action-px: 1.75em;
}

/* img */
.img-wrapper > a {
  display: flex;
  width: fit-content;
}

/* media query */
@media (min-width: 500px) {
  .header {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .content__img {
    margin-block-start: 4rem;
  }
  .footer__content {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1000px) {
  .cta {
    grid-template-columns: repeat(2, 1fr);
  }
  .point-list {
    text-align: center;
    justify-content: space-between;
  }
  .content {
    display: grid;
    grid-template-columns: 2fr 1fr;
    gap: 20vmin;
    padding-inline: 0;
    align-items: start;
  }
  .list {
    margin-block-start: 0;
  }
  .footer__content {
    text-align: left;
    grid-template-columns: 2fr repeat(3, 1fr);
    justify-items: end;
  }
}

